# oomph-lib

./: .clang-format
doc/: navbar_toggle.js
doc/css/: oomph_header.css
doc/figures/: browserconfig.xml
doc/mpi/general_mpi/: general_mpi.txt
external_distributions/: CMakeUserPresets.json
external_distributions/install/gklib/lib/cmake/GKlib/: GKlibTargets-release.cmake  GKlibTargets.cmake
src/generic/: superlu_dist.c
zak_playground/multi_physics_exercise/: CMakeLists.txt  boussinesq_convection.cc
zak_playground/navier_stokes_exercise/: CMakeLists.txt  heated_driven_cavity.cc  horizontal_driven_cavity.cc  plot_solutions.py
zak_playground/one_d_poisson_exercise/: CMakeLists.txt  one_d_poisson_exercise.cc  plot_solutions.py
zak_playground/two_d_poisson_exercise/: CMakeLists.txt  plot_solutions.py  two_d_poisson_exercise.cc
